# ar_archive_writer

./: Cargo.toml  Readme.md  rust-toolchain.toml
.github/workflows/: ci.yml
reference/: Alignment.h  Archive.h  ArchiveWriter.cpp  ArchiveWriter.h  COFF.h  COFFImportFile.cpp  COFFImportFile.h  MathExtras.h  Readme.md
src/: Alignment.h  Archive.h  ArchiveWriter.cpp  ArchiveWriter.h  archive.rs  archive_writer.rs  coff.rs  coff_import_file.rs  lib.rs  mangler.rs  math_extras.rs  object_reader.rs
tests/: common.rs  import_library.def  import_library.rs  multiple_objects.rs  round_trip.rs
