[package]
name = "ar_archive_writer"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
description = "A writer for object file ar archives"
keywords = ["ar", "archive"]
readme = "Readme.md"
repository = "https://github.com/rust-lang/ar_archive_writer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.32.0", default-features = false, features = ["std", "read"] }

[dev-dependencies]
cargo-binutils = "0.3.6"
object = { version = "0.32.0", default-features = false, features = ["write", "xcoff"] }
pretty_assertions = "1.4.0"
